--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -105,7 +105,6 @@
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--blueColor);
-    padding-right: 10px;
   }
 }
 
